--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid rgb(255, 244, 244);
   margin: 0 7.5px 15px;
   overflow: hidden;
 
@@ -48,7 +48,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 244, 244);
     background-color: #fff;
     opacity: 0.7;
     position: absolute;
