--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Open Sans Condensed';
   padding: 20px 60px;
@@ -6,4 +10,12 @@ body {
 a {
   text-decoration: none;
   color: #000;
+}
+
+h1,
+h2,
+a,
+input {
+  font-family: 'Open Sans Condensed';
+  font-weight: 500;
 }
